Fix table layout for TaskRun parameters and results
Remove the width override on the value column to allow for normal
browser layout to kick in. This prevents the description being
unnecessarily squashed or pushed off the right edge.

--- a/packages/components/src/components/StepDetails/StepDetails.scss
+++ b/packages/components/src/components/StepDetails/StepDetails.scss
@@ -21,10 +21,4 @@ limitations under the License.
   .bx--tab-content {
     padding-left: 0;
   }
-
-  .bx--tab-content .tkn--table .bx--data-table.bx--data-table--short {
-    td.cell-value {
-      max-width: unset;
-    }
-  }
 }
